--- a/index.html
+++ b/index.html
@@ -337,10 +337,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.4/dist/ethers.umd.min.js"></script>
 
-  <script type="module" src="./contract.js"></script>
-  <script type="module" src="./wallet.js"></script>
-  <script type="module" src="./mint.js"></script>
-  <script>window.__MINT_UI_MANAGED_BY_MINT_JS__ = true;</script>
+  <script type="module" src="./app.js"></script>
   <script src="./index.js"></script>
 </body>
 
