--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Dazzling Animals</title>
   <link rel="stylesheet" href="./styles.css" />
   <meta name="theme-color" content="#ffffff" />
+  <link rel="icon" href="./img/favicon.ico" sizes="any">
+  <link rel="shortcut icon" href="./img/favicon.ico">
+  <link rel="apple-touch-icon" href="./img/favicon.ico">
+
 </head>
 
 <body>
@@ -66,7 +70,7 @@
             </span>
             <span class="mobileMenu__walletText">Connect Wallet</span>
           </button>
-          
+
           <!-- 연결 후 표시될 정보 -->
           <div id="walletMobileInfo" class="mobileMenu__walletInfo hidden">
             <div class="mobileMenu__walletAddress" id="walletMobileAddress"></div>
@@ -76,7 +80,8 @@
                 <i data-lucide="copy"></i>
                 <span>Copy Address</span>
               </button>
-              <button id="disconnectMobileBtn" class="mobileMenu__actionBtn mobileMenu__actionBtn--danger" type="button">
+              <button id="disconnectMobileBtn" class="mobileMenu__actionBtn mobileMenu__actionBtn--danger"
+                type="button">
                 <i data-lucide="log-out"></i>
                 <span>Disconnect</span>
               </button>
@@ -173,7 +178,8 @@
                 <span id="totalCostLabel" class="mint__totalValue">...</span>
               </div>
 
-              <button id="mintBtn" class="mint__mintBtn" type="button" style="opacity:1;cursor:pointer;background:#667eea;" disabled>
+              <button id="mintBtn" class="mint__mintBtn" type="button"
+                style="opacity:1;cursor:pointer;background:#667eea;" disabled>
                 <span style="display:flex;align-items:center;justify-content:center;gap:8px;">
                   <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <polyline points="23 4 23 10 17 10"></polyline>
