--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
   <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel="apple-touch-icon" href="./img/favicon.ico">
 
+  <meta name="description" content="Dazzling Animals — Generation 1 Heroes. 'Sunglasses' allow them to face their brilliance." />
+  <link rel="canonical" href="https://dazzlinganimals.netlify.app/" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dazzlinganimals.netlify.app/" />
+  <meta property="og:title" content="Dazzling Animals" />
+  <meta property="og:description" content="Dazzling Animals — Generation 1 Heroes. 'Sunglasses' allow them to face their brilliance." />
+  <meta property="og:image" content="https://dazzlinganimals.netlify.app/img/og.png" />
+  <meta property="og:site_name" content="Dazzling Animals" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Dazzling Animals" />
+  <meta name="twitter:description" content="Dazzling Animals — Generation 1 Heroes. 'Sunglasses' allow them to face their brilliance." />
+  <meta name="twitter:image" content="https://dazzlinganimals.netlify.app/img/og.png" />
+
 </head>
 
 <body>
