--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
               </div>
             </div>
 
+            <div class="mint__progress">
+              <div class="mint__progressTop">
+                <span id="roundProgressTitle">Round Minted</span>
+                <span id="roundMintedLabel">Loading...</span>
+              </div>
+              <div class="mint__bar">
+                <div id="roundProgressBar" class="mint__barFill" style="width:0%"></div>
+              </div>
+            </div>
+
             <div id="mintStatusBox"></div>
 
             <div class="mint__controls">
